# compress

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Main.qml  main.cpp
src/app/assets/: CMakeLists.txt  FileList.qml  TextLabel.qml
src/app/datamodel/: abstractdatamodel.h  datamodel.cpp  datamodel.h  dataprovider.cpp  dataprovider.h
src/app/model/: mainmodel.cpp  mainmodel.h
src/app/taskrunner/: compressortask.cpp  compressortask.h  taskrunner.cpp  taskrunner.h
src/compress/: CMakeLists.txt  bmpdatareader.cpp  bmpdatareader.h  bmpimageprocessor.cpp  bmpimageprocessor.h  compresseddatareader.cpp  compresseddatareader.h  compressor.cpp  compressor.h  decompressor.cpp  decompressor.h  saveutils.cpp  saveutils.h  types.h
